# qronos

./: .gitignore  AUTHORS  ChangeLog  DESIGN  Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  auth.c  auth.h  bbdd.c  bbdd.h  call.c  check.c  check.h  close.c  conf.h.in  configure  configure.in  exec.c  exec.h  log.c  log.h  mkinstalldirs  msg.c  msg.h  qronos.c  qronos.h  qronosd.c  qronosd.h
intl/: ChangeLog
po/: ChangeLog  POTFILES.in  cat-id-tbl.c  es.po  qronos.pot
