dnl Process this file with autoconf to produce a configure script.
AC_INIT(exec.c)

dnl Iniciamos el automake
AM_INIT_AUTOMAKE(qronos, 0.9)
AM_CONFIG_HEADER(conf.h)
 
dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LN_S
AC_PROG_AWK
AC_ISC_POSIX

dnl Definimos las traducciones disponibles
ALL_LINGUAS="es"

dnl Checks for libraries.
dnl Preparando para Solaris
AC_CHECK_LIB(socket, send)
AC_CHECK_LIB(intl, bindtextdomain)
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(ident, ident_id)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(malloc.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME
AC_CHECK_HEADERS(sys/time.h)
AC_TYPE_UID_T


dnl Checks for library functions.
AC_CHECK_FUNCS(strchr)

dnl Configuramos 'i18n'
AM_GNU_GETTEXT
AC_OUTPUT(Makefile intl/Makefile po/Makefile.in)
